# github-gameoff-2022

./: .gitignore  CMakeLists.txt  README.md
include/: EventEmitter.hpp  GameScene.hpp  Globals.hpp  Scene.hpp  SceneManager.hpp  TestScene.hpp
include/GameObjects/: GameObject.hpp
include/Scenes/: GameScene.hpp  Scene.hpp
src/: EventEmitter.cpp  GameObject.cpp  GameScene.cpp  SceneManager.cpp  main.cpp
src/GameObjects/: GameObject.cpp
src/Scenes/: GameScene.cpp
